k8s/java-app-example-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: java-app-example
  labels:
    app: java-app-example
    app.kubernetes.io/component: java-app-example
    app.kubernetes.io/instance: java-app-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app-example
  template:
    metadata:
      labels:
        app: java-app-example
    spec:
      containers:
        - name: java-app-example
          image: docker.io/nagendrarb/java-spring-boot:v1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
