k8s/java-app-example-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: java-app
  labels:
    app: java-app
    app.kubernetes.io/component: java-app
    app.kubernetes.io/instance: java-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8443
      targetPort: 8080
  selector:
    app: java-app
