k8s/java-app-example-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: java-app-example
  labels:
    app: java-app-example
    app.kubernetes.io/component: java-app-example
    app.kubernetes.io/instance: java-app-example
spec:
  to:
    kind: Service
    name: java-app-example
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
